--- a/base-project/index.html
+++ b/base-project/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport"
     content="width=device-width,
         initial-scale=1.0">
-    <title>DocumentTitle</title>
+    <title>Quiz Welcome Page</title>
     <!--  defines the relationship between the current document and an 
         external resource. href = location of linked document (URL) -->
     <link rel="stylesheet" href='style.css'>
@@ -22,8 +22,12 @@
 
 </head>
 <body>
-    <!-- header 1 -->
-    <h1>Hello The0z</h1>
+    <div class="welcomeScreen">
+        <h3>WELCOME TO KATHLEEN'S <br> WHO IS THAT QUIZ</h3>
+        <input type='text' id='teamName' name='teamName' placeholder="Enter your team name">
+        <input type='button' id='teamBtn' value="SUBMIT" disabled>
+    </div>
+
 </body>
 </html>
 
