Testing phpForm.php

--- a/base-project/InsertRecords.html
+++ b/base-project/InsertRecords.html
@@ -13,7 +13,7 @@
     <body>
     
         <!-- action is the URL where to send the form-data to -->
-        <form action="phpTestPage.php" method="post">
+        <form action="phpForm.php" method="post">
             <label for='name'>Name:</label>
             <input type='text' id='name' name='name'><br>
             <label for='age'>Age:</label>
