Added questions webpage and renamed index pages

--- a/base-project/index.html
+++ b/base-project/index.html
@@ -15,15 +15,15 @@
     <title>Quiz Welcome Page</title>
     <!--  defines the relationship between the current document and an 
         external resource. href = location of linked document (URL) -->
-    <link rel="stylesheet" href='style.css'>
+    <link rel="stylesheet" href='indexStyle.css'>
     <!-- Same as above, except used to embed a client-side script (JavaScript). -->
     <!-- defer load script adter page has finished parsing -->
-    <script src="script.js" defer></script>
+    <script src="indexScript.js" defer></script>
 
 </head>
 <body>
     <div class="welcomeScreen">
-        <h3>WELCOME TO KATHLEEN'S <br> WHO IS THAT QUIZ</h3>
+        <h3>WELCOME TO KATHLEEN'S <br> WHO THE HECK IS THAT QUIZ</h3>
         <input type='text' id='teamName' name='teamName' placeholder="Enter your team name">
         <input type='button' id='teamBtn' value="SUBMIT" disabled>
     </div>
