Added more questions. PHP syntax error fixed

--- a/base-project/questions/questions.html
+++ b/base-project/questions/questions.html
@@ -64,6 +64,66 @@
             <img src="Images/Brad-Pitt.jpg" class='questionImg' alt='question 8 person'>
             <input type='text' id='q8' class='textInput' name='q8' placeholder="Enter Your Guess Here">
         </div>
+        <div class='questionPanel'>
+            <label for='q9'>Question 9</label>
+            <img src="Images/Brad-Pitt.jpg" class='questionImg' alt='question 9 person'>
+            <input type='text' id='q9' class='textInput' name='q9' placeholder="Enter Your Guess Here">
+        </div>
+        <div class='questionPanel'>
+            <label for='q10' class='label'>Question 10</label>
+            <img src="Images/Brad-Pitt.jpg" class='questionImg' alt='question 10 person'>
+            <input type='text' id='q10' class='textInput' name='q10' placeholder="Enter Your Guess Here">
+        </div>
+        <div class='questionPanel'>
+            <label for='q11'>Question 11</label>
+            <img src="Images/Brad-Pitt.jpg" class='questionImg' alt='question 11 person'>
+            <input type='text' id='q11' class='textInput' name='q11' placeholder="Enter Your Guess Here">
+        </div>
+        <div class='questionPanel'>
+            <label for='q12' class='label'>Question 12</label>
+            <img src="Images/Brad-Pitt.jpg" class='questionImg' alt='question 12 person'>
+            <input type='text' id='q12' class='textInput' name='q12' placeholder="Enter Your Guess Here">
+        </div>
+        <div class='questionPanel'>
+            <label for='q13'>Question 13</label>
+            <img src="Images/Brad-Pitt.jpg" class='questionImg' alt='question 13 person'>
+            <input type='text' id='q13' class='textInput' name='q13' placeholder="Enter Your Guess Here">
+        </div>
+        <div class='questionPanel'>
+            <label for='q14' class='label'>Question 14</label>
+            <img src="Images/Brad-Pitt.jpg" class='questionImg' alt='question 14 person'>
+            <input type='text' id='q14' class='textInput' name='q14' placeholder="Enter Your Guess Here">
+        </div>
+        <div class='questionPanel'>
+            <label for='q15'>Question 15</label>
+            <img src="Images/Brad-Pitt.jpg" class='questionImg' alt='question 15 person'>
+            <input type='text' id='q15' class='textInput' name='q15' placeholder="Enter Your Guess Here">
+        </div>
+        <div class='questionPanel'>
+            <label for='q16' class='label'>Question 16</label>
+            <img src="Images/Brad-Pitt.jpg" class='questionImg' alt='question 16 person'>
+            <input type='text' id='q16' class='textInput' name='q16' placeholder="Enter Your Guess Here">
+        </div>
+        <div class='questionPanel'>
+            <label for='q17'>Question 17</label>
+            <img src="Images/Brad-Pitt.jpg" class='questionImg' alt='question 17 person'>
+            <input type='text' id='q17' class='textInput' name='q17' placeholder="Enter Your Guess Here">
+        </div>
+        <div class='questionPanel'>
+            <label for='q18' class='label'>Question 18</label>
+            <img src="Images/Brad-Pitt.jpg" class='questionImg' alt='question 18 person'>
+            <input type='text' id='q18' class='textInput' name='q18' placeholder="Enter Your Guess Here">
+        </div>
+        <div class='questionPanel'>
+            <label for='q19'>Question 19</label>
+            <img src="Images/Brad-Pitt.jpg" class='questionImg' alt='question 19 person'>
+            <input type='text' id='q19' class='textInput' name='q19' placeholder="Enter Your Guess Here">
+        </div>
+        <div class='questionPanel'>
+            <label for='q20' class='label'>Question 20</label>
+            <img src="Images/Brad-Pitt.jpg" class='questionImg' alt='question 20 person'>
+            <input type='text' id='q20' class='textInput' name='q20' placeholder="Enter Your Guess Here">
+        </div>
     </div>
     </form>
     <button id='formBtn' type="submit">SUBMIT ANSWERS</button>
