--- a/base-project/questions/tableformatter.html
+++ b/base-project/questions/tableformatter.html
@@ -18,7 +18,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous" defer></script>
     <!-- Lottie -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.7.3/lottie.min.js" defer></script>
-    <script src="js/alt-alert.js" defer></script>
+    <script src="javascript/alt-alert.js" defer></script>
     <script src="scoreboardScript.js" defer></script>
 </head>
 <body>
