--- a/base-project/gamePages/tableformatter.html
+++ b/base-project/gamePages/tableformatter.html
@@ -10,7 +10,7 @@
     <link href="https://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
     <!-- required for confirmation form -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.5.2/materia/bootstrap.min.css">
-    <link rel="stylesheet" href='questionsStyle.css'>
+    <link rel="stylesheet" href='css/questionsStyle.css'>
     <!-- Same as above, except used to embed a client-side script (JavaScript). -->
     <!-- defer load script adter page has finished parsing -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" defer></script>
@@ -19,7 +19,7 @@
     <!-- Lottie -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.7.3/lottie.min.js" defer></script>
     <script src="javascript/alt-alert.js" defer></script>
-    <script src="scoreboardScript.js" defer></script>
+    <script src="javascript/scoreboardScript.js" defer></script>
 </head>
 <body>
     <h2> Answers and Guesses </h2>
