--- a/base-project/index.html
+++ b/base-project/index.html
@@ -15,10 +15,10 @@
     <title>Quiz Welcome Page</title>
     <!--  defines the relationship between the current document and an 
         external resource. href = location of linked document (URL) -->
-    <link rel="stylesheet" href='indexStyle.css'>
+    <link rel="stylesheet" href='css/indexStyle.css'>
     <!-- Same as above, except used to embed a client-side script (JavaScript). -->
     <!-- defer load script adter page has finished parsing -->
-    <script src="indexScript.js" defer></script>
+    <script src="javascript/indexScript.js" defer></script>
 
 </head>
 <body>
