--- a/base-project/gamePages/tableformatter.html
+++ b/base-project/gamePages/tableformatter.html
@@ -6,8 +6,8 @@
     content="width=device-width,
         initial-scale=1.0">
     <title>Scoreboard</title>
-    <!-- required for confirmation form -->
-    <link href="https://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
+    <!-- required for confirmation form - nevermind -->
+    <!-- <link href="https://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css"> -->
     <!-- required for confirmation form -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.5.2/materia/bootstrap.min.css">
     <link rel="stylesheet" href='css/questionsStyle.css'>
