--- a/base-project/gamePages/tableformatter.html
+++ b/base-project/gamePages/tableformatter.html
@@ -1,30 +1,33 @@
 <!DOCTYPE HTML> 
 <html lang ="en"> 
 <head> <!-- Metadata container  (data about data) -->
-    <meta charset="UTF-8">
-    <meta name="viewport"
-    content="width=device-width,
-        initial-scale=1.0">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
     <title>Scoreboard</title>
-    <!-- required for confirmation form - nevermind -->
-    <!-- <link href="https://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css"> -->
-    <!-- required for confirmation form -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.5.2/materia/bootstrap.min.css">
+    <!-- STYLES -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css">
     <link rel="stylesheet" href='css/questionsStyle.css'>
-    <!-- Same as above, except used to embed a client-side script (JavaScript). -->
-    <!-- defer load script adter page has finished parsing -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" defer></script>
-    <!-- Boot Strap -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous" defer></script>
-    <!-- Lottie -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.7.3/lottie.min.js" defer></script>
-    <script src="javascript/alt-alert.js" defer></script>
+
+    <!-- SCRIPTS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
+    
     <script src="javascript/scoreboardScript.js" defer></script>
+    <script src="https://kit.fontawesome.com/81e040d0bb.js" crossorigin="anonymous"></script>
+
 </head>
-<body>
-    <h2> Answers and Guesses </h2>
-    <input type='button' id='startOverBtn' value="Play Again?">
-    <table>
+<body id='myBody'>
+    <div class='myDiv'>
+    <h2 class='myH2'> Answers and Guesses </h2>
+    <div>
+        <input type='button' id='startOverBtn' value="Play Again?">
+    </div>
+    <table class='myTable'>
         <!-- tr defines a row of a table, th is header, td is data -->
     <tr>
         <th scope='row'>Team Name</th>
@@ -75,5 +78,6 @@
         <td>Team C's Answer </td>
     </tr>
     </table>
+    </div>
 </body>
 </html>
