--- a/base-project/gamePages/questions.html
+++ b/base-project/gamePages/questions.html
@@ -19,7 +19,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 </head>
-<body>
+<body id='myBody'>
     <h2 id='teamName'>Team Name</h2>
     <p id='instructions' class='questionPanel'>Who do you think it is? Enter your answers in the field below the image</p>
     <form id='testForm' action="php/submitAnswers.php" method="post">
