Breifly commented test files

--- a/base-project/testingFiles/InsertRecords.html
+++ b/base-project/testingFiles/InsertRecords.html
@@ -1,3 +1,6 @@
+<!-- Used to test how to use html forms along with PHP to submit data to a MySQL database 
+no longer has any purpose besides to be used as a refresher on php database handling -->
+
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
