Updated for 24 Questions

--- a/base-project/gamePages/questions.html
+++ b/base-project/gamePages/questions.html
@@ -28,7 +28,7 @@
 <body class='myBody'>
     <div class='myDiv'>
     <h2 class='myH2' id='teamName'>Team Name</h2>
-    <p id='instructions' class='questionPanel'>Answer all 20 Questions Below!</p>
+    <p id='instructions' class='questionPanel'>Answer all 22 Questions Below!</p>
     <form id='testForm' action="php/submitAnswers.php" method="post">
     <!-- Flex container to hold all the questions -->
     <div class='flex-container'>
@@ -132,6 +132,26 @@
             <p id='q20P'>Question 20</p>
             <img src="game_images/backup.jpg" id='q20Img' class='questionImg' alt='question 20 person'>
             <input type='text' id='q20' class='textInput' name='q20' placeholder="Enter Your Guess Here">
+        </div>
+                <div class='questionPanel'>
+            <p id='q21P'>Question 21</p>
+            <img src="game_images/backup.jpg" id='q21Img' class='questionImg' alt='question 21 person'>
+            <input type='text' id='q21' class='textInput' name='q21' placeholder="Enter Your Guess Here">
+        </div>
+        <div class='questionPanel'>
+            <p id='q22P'>Question 22</p>
+            <img src="game_images/backup.jpg" id='q22Img' class='questionImg' alt='question 22 person'>
+            <input type='text' id='q22' class='textInput' name='q22' placeholder="Enter Your Guess Here">
+        </div>
+        <div class='questionPanel'>
+            <p id='q23P'>Question 23</p>
+            <img src="game_images/backup.jpg" id='q23Img' class='questionImg' alt='question 23 person'>
+            <input type='text' id='q23' class='textInput' name='q23' placeholder="Enter Your Guess Here">
+        </div>
+        <div class='questionPanel'>
+            <p id='q24P'>Question 24</p>
+            <img src="game_images/backup.jpg" id='q24Img' class='questionImg' alt='question 24 person'>
+            <input type='text' id='q24' class='textInput' name='q24' placeholder="Enter Your Guess Here">
         </div>
     </div>
     </form>
