CSS Edits and Instruction Update

--- a/base-project/gamePages/questions.html
+++ b/base-project/gamePages/questions.html
@@ -28,7 +28,11 @@
 <body class='myBody'>
     <div class='myDiv'>
     <h2 class='myH2' id='teamName'>Team Name</h2>
-    <p id='instructions' class='questionPanel'>Answer all 22 Questions Below!</p>
+    <p id='instructions' class='questionPanel'><span class="impBold">Answer all 24 Questions Below!</span> 
+        <br> Use Dashes for questions with more than 1 part. <br> 
+        <span class="impBold">Example:</span> How many days in a year AND how many hours in a day? 
+        <br> <span class="impBold">Answer:</span> 365 days - 24 hours
+    </p>
     <form id='testForm' action="php/submitAnswers.php" method="post">
     <!-- Flex container to hold all the questions -->
     <div class='flex-container'>
